Implement logout functionality, fix session issue and initilize google auth setup

--- a/.env
+++ b/.env
@@ -1,4 +1,7 @@
 GITHUB_ID = Ov23lib2qAMaN8qz8hcd
 GITHUB_SECRET = e46cd657a71771da8bb1e53dba8263fd8a180395
 
+GOOGLE_ID = 
+GOOGLE_SECRET = 
+
 NEXTAUTH_SECRET = abc
